# stitch

./: .env.example  .gitignore  pyproject.toml
data-sources/: data.txt
docs/: pr-faq.md  prd.md  testing.md
src/stitch/: __init__.py  agents.py  bus.py  cli.py  config.py  document_artifacts.py  extraction.py  hitl.py  json_yaml.py  models.py  orchestrator.py  paths.py  pipeline_store.py  planning.py  profiling.py  reporting.py  sandbox.py  sources.py  tracing.py
tests/: test_agents_sdk.py  test_codex_agents.py  test_config_pipeline_store.py  test_document_artifacts.py  test_extraction.py  test_profile_plan_report.py  test_sources.py  test_tracing.py
