[project]
name = "stitch"
version = "0.1.0"
description = "Local-first CLI for orchestrating sandboxed agents into reusable ETL pipelines."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cocoindex>=1.0.7",
    "redis>=5.0.0",
    "weave>=0.51.0",
    "wandb[sandbox]>=0.27.2",
    "openai-agents>=0.17.4",
    "pydantic>=2.13.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
stitch = "stitch.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
